# JBToolbox_Cplusplus

./: CMakeLists.txt  main.cpp
JBCodec/: JBAscii85.hpp  JBBase64.hpp
JBCommon/: JBCommon.hpp  TextStuff.h
JBCrypto/: JBAdler32.hpp  JBBlowfish.hpp  JBCrc64.hpp  JBMd5.hpp  JBShaxxx.hpp  JBTwofish.hpp
JBSelftest/: JBAdler32Selftest.hpp  JBAscii85Selftest.hpp  JBBase64Selftest.hpp  JBBlowfishSelftest.hpp  JBBlowfishSpeedtest.hpp  JBCrc64Selftest.hpp  JBMd5Selftest.hpp  JBShaSelftest.hpp  JBTwofishSelftest.hpp  JBTwofishSpeedtest.hpp
